integrated board generation, restructured

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -121,7 +121,7 @@ h1 {
 
 .cell.revealed {
     border-color: #808080 #dfdfdf #dfdfdf #808080;
-    background-color: #c0c0c0;
+    background-color: #b6fcb6;
     cursor: default;
 }
 
