--- a/app/templates/snake.html
+++ b/app/templates/snake.html
@@ -95,10 +95,10 @@
         <canvas id="snake-canvas" width="600" height="600"></canvas>
         
         <div class="snake-controls">
-            <button class="btn" onclick="startGame()">Start Game</button>
-            <button class="btn" onclick="restartGame()">Restart</button>
-            <button class="btn" onclick="window.location.href='/'">Home</button>
-            <button class="btn logout-btn" onclick="window.location.href='/logout'">Logout</button>
+            <button class="hint" onclick="startGame()">Start Game</button>
+            <button class="hint" onclick="restartGame()">Restart</button>
+            <button class="hint" onclick="window.location.href='/'">Home</button>
+            <button class="hint logout-btn" onclick="window.location.href='/logout'">Logout</button>
         </div>
         
         <div class="arrow-keys">
