--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample HTML Page</title>
+    <title>MineSweeper</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"></head>
 <body>
     <div class="bg-grid"></div>
@@ -91,7 +91,6 @@
                         console.log('Flags placed: ' + data.flagged);
                     }
                 });
-                cell.classList.toggle('flagged');
             }
         }
         async function restartGame() {
